Fix DecoderException on server